// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown/presenters/MenuPresenter renders with all props 1`] = `
.emotion-0 {
  display: block;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

<div
  className="emotion-0 custom-class"
>
  <p>
    hi
  </p>
</div>
`;

exports[`Dropdown/presenters/MenuPresenter renders with only required props 1`] = `
.emotion-0 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

<div
  className="emotion-0"
/>
`;
